map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,3 +232,11 @@ ul.menu-items {
     line-height: 250%;
   }
 }
+
+/* Tablet */
+
+@media only screen and (min-width: 768px) {
+  .hero-image {
+    width: 20rem;
+  }
+}
