map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ ul.menu-items {
 
 /* Tablet */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .hero-image {
     width: 20rem;
   }
