map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ ul.menu-items {
 /* Media Queries */
 /* Tablet */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .hero-image {
     width: 20rem;
   }
