--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,12 @@ ul.menu-items {
 /* Tablet */
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .hero-top {
+    width: 60vh;
+  }
+  .hero-bottom {
+    width: 40vh;
+  }
   .hero-image {
     width: 25rem;
   }
