--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,15 @@ ul.menu-items {
 }
 
 /* Media Queries */
+
+/* Mobile */
+
+@media only screen and (max-width: 320px) {
+  .hero-top {
+    flex-direction: column;
+  }
+}
+
 /* Tablet */
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
