--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ ul.menu-items {
 
 /* Mobile */
 
-@media screen and (in-width: 375px) {
+@media screen and (min-width: 375px) {
   .hero-top {
     display: none;
   }
