--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ ul.menu-items {
   }
   .hero-bottom-left {
     width: 100%;
-    justify-content: center;
+    align-items: center;
   }
   .hero-title-top {
     font-size: 3rem;
