--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,7 @@ ul.menu-items {
   }
   .hero-bottom {
     flex-direction: column;
+    display: none;
   }
   .hero-bottom-left {
     width: 100%;
