--- a/css/styles.css
+++ b/css/styles.css
@@ -233,10 +233,11 @@ ul.menu-items {
     padding-bottom: 50px;
   }
   .hero-top-right {
-    background-size: 18rem;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 29vh;
+    margin-top: -39px;
+    background-size: 16rem;
   }
 }
 
