--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ ul.menu-items {
   .hero-top {
     flex-direction: column;
     height: auto;
-    height: 25vh;
+    height: 30vh;
   }
   .hero-bottom {
     flex-direction: column;
@@ -237,7 +237,7 @@ ul.menu-items {
     align-items: center;
     width: 100%;
     height: 29vh;
-    /* margin-top: -39px; */
+    margin-top: -39px;
     background-size: 16rem;
   }
 }
