--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,9 @@ ul.menu-items {
     flex-direction: column;
     /* display: none; */
   }
+  .hero-bottom p.text-header {
+    font-size: 1.5rem;
+  }
   .hero-bottom-left {
     width: 100%;
     align-items: center;
