--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,11 @@ ul.menu-items {
   .hero-bottom p.text-header {
     font-size: 1.5rem;
   }
+
+  .hero-bottom p.text-body {
+    background-size: 10rem;
+  }
+
   .hero-bottom-left {
     width: 100%;
     align-items: center;
