map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ ul.menu-items {
   }
 
   .hero-bottom p.text-body {
-    background-size: 10rem;
+    background-size: 14em;
   }
 
   .hero-bottom-left {
