--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ ul.menu-items {
   .hero-bottom p.text-body {
     background-size: 14rem;
     font-size: 1rem;
+    height: 100%;
   }
 
   .hero-bottom-left {
