--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,7 @@ ul.menu-items {
     background-size: 14rem;
     font-size: 1rem;
     height: 100%;
+    padding-top: 2.5em;
   }
 
   .hero-bottom-left {
