--- a/css/styles.css
+++ b/css/styles.css
@@ -221,13 +221,14 @@ ul.menu-items {
   .hero-bottom p.text-header {
     font-size: 1.5rem;
     padding-top: 0.5rem;
+    padding-bottom: 0.5em;
   }
 
   .hero-bottom p.text-body {
     background-size: 14rem;
     font-size: 1rem;
     height: 100%;
-    padding-top: 2.5em;
+    padding-top: 2.9em;
   }
 
   .hero-bottom-left {
