--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ ul.menu-items {
   display: flex;
   flex-direction: column;
   padding-top: calc(var(--nav-height) + 1.7rem);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* top section of Hero section */
@@ -227,7 +227,7 @@ ul.menu-items {
   .hero-bottom p.text-body {
     background-size: 14rem;
     font-size: 1rem;
-    height: 100%;
+    height: auto;
     padding-top: 2.9em;
   }
 
