--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ body {
   background-color: #ffffff;
   border-bottom: 1px solid #000000;
   overflow: hidden;
-  /* border: 2px solid red; */
 }
 
 .nav-menu-wrapper {
@@ -82,11 +81,9 @@ ul.menu-items {
   display: flex;
   flex-direction: column;
   padding-top: calc(var(--nav-height) + 1.7rem);
-  /* overflow: hidden; */
 }
 
 /* top section of Hero section */
-
 .hero-top {
   display: flex;
   height: 45vh;
@@ -107,17 +104,14 @@ ul.menu-items {
   height: auto;
   width: 45vw;
   background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
-  /* background-image: url("http://localhost:5500/img/Bermuda.svg"); */
   background-repeat: no-repeat;
   background-position: center;
-  /* background-size: 30rem; */
   background-size: 30rem;
 }
 
 .hero-title-top {
   display: flex;
   font-family: "Caveat", cursive;
-  /* font-size: 6rem; */
   font-size: 6rem;
   color: white;
   align-items: center;
@@ -128,7 +122,6 @@ ul.menu-items {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  /* width: 50rem;  */
   width: 35rem;
   height: 100%;
 }
@@ -140,7 +133,6 @@ ul.menu-items {
   width: 100%;
   background-repeat: no-repeat;
   background-position: top right;
-  /* background-size: 60px; */
 }
 
 .hero-bottom-left {
@@ -170,7 +162,6 @@ ul.menu-items {
   width: 100%;
   height: 100%;
   padding-top: 4rem;
-  /* background-image: url("http://localhost:5500/img/squiggle.svg"); */
   background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
   background-repeat: no-repeat;
   background-position: center top;
@@ -216,7 +207,6 @@ ul.menu-items {
   }
   .hero-bottom {
     flex-direction: column;
-    /* display: none; */
   }
   .hero-bottom p.text-header {
     font-size: 1.5rem;
@@ -256,6 +246,11 @@ ul.menu-items {
     height: 29vh;
     margin-top: -39px;
     background-size: 15.8rem;
+  }
+  #learn-more-btn {
+    width: 200px;
+    height: 50px;
+    font-size: 1.8rem;
   }
 }
 
