map not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ ul.menu-items {
     background-size: 15.8rem;
   }
   #learn-more-btn {
-    width: 200px;
+    width: 3rem;
     height: 50px;
     font-size: 1.8rem;
   }
