--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ ul.menu-items {
 .hero {
   display: flex;
   flex-direction: column;
-  padding-top: calc(var(--nav-height) + 1.7rem);
+  padding-top: calc(var(--nav-height));
 }
 
 /* top section of Hero section */
