--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,8 @@ ul.menu-items {
   }
   .hero-bottom {
     flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
   .hero-bottom p.text-header {
     font-size: 1.5rem;
@@ -249,8 +251,9 @@ ul.menu-items {
     width: 100%;
     height: 29vh;
     margin-top: -39px;
-    background-size: 15.8rem;
+    background-size: 70%;
   }
+
   #learn-more-btn {
     width: 10rem;
     height: 50px;
