--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ ul.menu-items {
     align-items: center;
     width: 100%;
     height: 29vh;
-    margin-top: -39px;
+    /* margin-top: -39px; */
     background-size: 70%;
   }
 
