--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ ul.menu-items {
   .hero-top-right {
     align-items: center;
     width: 100%;
-    height: 100%
+    height: 100%;
     /* margin-top: -39px; */
     background-size: 70%;
   }
