--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,6 @@ ul.menu-items {
     flex-direction: column;
     width: 100%;
     align-items: center;
-    padding-top: 4rem;
     padding-bottom: 2rem;
   }
 
@@ -251,7 +250,7 @@ ul.menu-items {
     width: 100%;
     height: 100%;
     /* margin-top: -39px; */
-    background-size: 50%;
+    background-size: 100% 100%;
   }
 
   #learn-more-btn {
