--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100vw;
-  padding-bottom: 20px;
 }
 
 .hero-top-left {
@@ -117,6 +116,8 @@ ul.menu-items {
   color: white;
   align-items: center;
   text-align: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .hero-image {
