--- a/css/styles.css
+++ b/css/styles.css
@@ -275,8 +275,8 @@ ul.menu-items {
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .hero-bottom p.text-body {
     background-size: 18rem;
-    padding-top: 3rem;
-    padding-bottom: 0;
+    /* padding-top: 3rem; */
+    /* padding-bottom: 0; */
     height: auto;
   }
 
