--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ ul.menu-items {
   }
 
   .hero-title-top {
-    /* font-size: 7.5rem; */
+    font-size: 6rem;
   }
   .hero-bottom p.text-body {
     line-height: 250%;
