--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,14 @@ ul.menu-items {
 
 /* Mobile */
 @media screen and (max-width: 700px) {
+  .nav-menu-wrapper {
+    padding: 0 0.4em;
+  }
+
+  .menu-logo > span {
+    font-size: 1.2rem;
+  }
+
   ul.menu-items {
     display: none;
   }
