--- a/css/styles.css
+++ b/css/styles.css
@@ -189,14 +189,16 @@ ul.menu-items {
   width: 350px;
   height: 108px;
   font-family: "Poppins", sans-serif;
-  background-color: #7a47a0;
+  background-color: #d156a1;
   color: white;
-  border-radius: 25px;
+
   border: none;
   outline: none;
   font-weight: 700;
   font-size: 1.8rem;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
 }
 
 #learn-more-btn:hover {
