--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
   height: var(--nav-height);
   left: 0px;
   top: 0px;
-  z-index: 99;
+  z-index: 5;
   background-color: #ffffff;
   border-bottom: 1px solid #000000;
   overflow: hidden;
@@ -205,6 +205,20 @@ ul.menu-items {
   background-color: #7d529d;
 }
 
+.mobile-overlay {
+  display: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0.85;
+  /* justify-content: center;
+  align-items: center; */
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  color: white;
+  z-index: 10;
+}
 /* Media Queries */
 
 /* Mobile */
