--- a/css/styles.css
+++ b/css/styles.css
@@ -210,9 +210,9 @@ ul.menu-items {
   position: absolute;
   top: 0px;
   left: 0px;
-  opacity: 0.85;
-  /* justify-content: center;
-  align-items: center; */
+  opacity: 0.9;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   height: 100vh;
   width: 100vw;
