--- a/css/styles.css
+++ b/css/styles.css
@@ -211,13 +211,24 @@ ul.menu-items {
   top: 0px;
   left: 0px;
   opacity: 0.9;
-  justify-content: center;
-  align-items: center;
   background-color: black;
   height: 100vh;
   width: 100vw;
   color: white;
   z-index: 10;
+}
+
+.close-btn {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  padding-right: 1em;
+  padding-top: 1em;
+}
+.close-btn img {
+  display: flex;
+  width: 75px;
+  height: 75px;
 }
 /* Media Queries */
 
