--- a/css/styles.css
+++ b/css/styles.css
@@ -230,14 +230,14 @@ ul.menu-items {
   position: relative;
   display: flex;
   justify-content: end;
-  padding-right: 0.4rem;
-  padding-top: 0.4rem;
+  padding-right: 0.4em;
+  padding-top: 0.4em;
 }
 
 .close-btn img {
   display: flex;
-  width: 75px;
-  height: 75px;
+  width: 50px;
+  height: 50px;
 }
 /* Media Queries */
 
