--- a/css/styles.css
+++ b/css/styles.css
@@ -220,10 +220,12 @@ ul.menu-items {
 }
 
 .overlay-menu {
+  display: flex;
   width: 100%;
+  height: 100%;
   position: relative;
-  display: block;
   justify-content: center;
+  align-items: center;
 }
 
 .close-btn {
@@ -235,7 +237,7 @@ ul.menu-items {
   padding-top: 1em;
 }
 
-.close-btn img {
+.menu-close-btn {
   width: 50px;
   height: 50px;
 }
