--- a/css/styles.css
+++ b/css/styles.css
@@ -265,11 +265,12 @@ ul.menu-items {
     flex-direction: column;
     height: auto;
     padding-bottom: 20px;
+    height: 45vh;
   }
   .hero-bottom {
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 45vh;
     background-color: white;
   }
 
@@ -287,11 +288,13 @@ ul.menu-items {
     padding-top: 0;
     color: black;
     padding: 0 10px 20px 10px;
+    height: 100%;
   }
 
   .hero-bottom-left {
     width: 100%;
     align-items: center;
+    height: 100%;
   }
 
   .hero-bottom-right {
@@ -299,6 +302,7 @@ ul.menu-items {
     width: 100%;
     align-items: center;
     padding-bottom: 1rem;
+    height: 100%;
   }
 
   .hero-title-top {
