--- a/css/styles.css
+++ b/css/styles.css
@@ -213,16 +213,16 @@ ul.menu-items {
   left: 0px;
   opacity: 0.9;
   background-color: black;
-  height: 100vh;
-  width: 100vw;
+  height: 0%;
+  width: 100%;
+  transition: height 2s ease-out;
   color: white;
   z-index: 10;
 }
 
 .overlay-menu {
   display: flex;
-  width: 100%;
-  height: 100%;
+
   position: relative;
   justify-content: center;
   align-items: center;
