--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ ul.menu-items {
 .hero-top-left {
   display: flex;
   justify-content: center;
-  width: 55vw;
+  width: 50%;
   height: 100%;
 }
 
@@ -102,7 +102,7 @@ ul.menu-items {
   justify-content: center;
   align-items: center;
   height: auto;
-  width: 45vw;
+  width: 50%;
   background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -141,10 +141,19 @@ ul.menu-items {
 .hero-bottom-left {
   display: flex;
   flex-direction: column;
-  width: 55vw;
+  width: 60vw;
   height: 100%;
   color: white;
   background-color: white;
+}
+
+.hero-bottom-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40vw;
+  height: 100%;
+  color: white;
 }
 
 .hero-bottom p.text-header {
@@ -152,7 +161,7 @@ ul.menu-items {
   justify-content: center;
   font-size: 2.2rem;
   padding-top: 1rem;
-  width: 100%;
+  /* width: 100%; */
   color: black;
   font-family: "Poppins", sans-serif;
 }
@@ -175,14 +184,6 @@ ul.menu-items {
 
 .hamburger {
   display: none;
-}
-.hero-bottom-right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45vw;
-  height: 100%;
-  color: white;
 }
 
 #learn-more-btn {
@@ -300,7 +301,7 @@ ul.menu-items {
   .hero-bottom-right {
     width: 100vw;
     align-items: center;
-    /* padding-bottom: rem; */
+    padding-bottom: 1rem;
     height: 50%;
   }
 
