--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ ul.menu-items {
   .hero-bottom-right {
     width: 100vw;
     align-items: center;
-    padding-bottom: 1rem;
+    padding-top: 1rem;
     height: 50%;
   }
 
