change mobile button size

--- a/css/styles.css
+++ b/css/styles.css
@@ -358,14 +358,14 @@ ul.menu-items {
   .hamburger {
     display: block;
   }
-  /* 
+
   .hero-top {
     height: 40vh;
   }
-*/
+
   .hero-bottom {
     flex-direction: column;
-    /* height: 60vh; */
+    height: 60vh;
   }
 
   .hero-bottom-left {
