--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,8 @@ ul.menu-items {
 
 /* Mobile */
 @media screen and (max-width: 700px) {
+  #learn-more-btn:not:hover
+
   .nav-menu-wrapper {
     padding: 0 0.4em;
   }
@@ -337,6 +339,7 @@ ul.menu-items {
 
 @media screen and (min-device-width: 701px) and (max-device-width: 1200px) {
   /* @media screen and (min-device-width: 800px) and (max-device-width: 1024px) { */
+    #learn-more-btn:not:hover;
   .hero-bottom p.text-body {
     background-size: 18rem;
     padding-top: 1rem;
