--- a/css/styles.css
+++ b/css/styles.css
@@ -175,10 +175,6 @@ ul.menu-items {
   width: 100%;
   height: 100%;
   padding-top: 1rem;
-  /* background-image: url("https://cwbermuda.netlify.com/img/squiggle.svg");
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 19rem; */
   color: black;
 }
 
@@ -210,9 +206,14 @@ ul.menu-items {
   left: 0px;
   opacity: 0.9;
   background-color: black;
-  height: 100vh;
+  max-height: 100vh;
   width: 100vw;
-  transition: display 2s ease-out;
+  transition: max-geight 1s ease-out;
+  -webkit-transition: max-height 1s;
+  -moz-transition: max-height 1s;
+  -ms-transition: max-height 1s;
+  -o-transition: max-height 1s;
+  transition: max-height 1s;
   color: white;
   z-index: 10;
 }
@@ -336,8 +337,6 @@ ul.menu-items {
 /* Tablet */
 
 @media screen and (min-device-width: 701px) and (max-device-width: 1200px) {
-  /* @media screen and (min-device-width: 800px) and (max-device-width: 1024px) { */
-
   .hero-bottom p.text-body {
     background-size: 18rem;
     padding-top: 1rem;
