--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ ul.menu-items {
   background-color: black;
   max-height: 100vh;
   width: 100vw;
-  transition: max-geight 1s ease-out;
+  transition: max-height 1s ease-out;
   -webkit-transition: max-height 1s;
   -moz-transition: max-height 1s;
   -ms-transition: max-height 1s;
