--- a/css/styles.css
+++ b/css/styles.css
@@ -206,14 +206,14 @@ ul.menu-items {
   left: 0px;
   opacity: 0.9;
   background-color: black;
-  max-height: 0;
+  height: 0;
   width: 100vw;
-  transition: max-height 3s;
-  -webkit-transition: max-height 3s;
-  -moz-transition: max-height 3s;
-  -ms-transition: max-height 3s;
-  -o-transition: max-height 3s;
-  transition: max-height 3s;
+  transition: height 3s;
+  -webkit-transition: height 3s;
+  -moz-transition: height 3s;
+  -ms-transition: height 3s;
+  -o-transition: height 3s;
+  transition: height 3s;
   color: white;
   z-index: 10;
 }
