--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,8 @@ ul.menu-items {
 
   .hero-top {
     /* flex-direction: column; */
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    padding: 0 0;
     height: 25vh;
   }
 
