--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ ul.menu-items {
   .hero-bottom {
     flex-direction: column;
     width: 100%;
-    height: 45vh;
+    height: 75%;
     background-color: white;
   }
 
