--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ ul.menu-items {
     width: 100%;
     height: 75vh;
     background-color: white;
+    align-items: center;
   }
 
   .hero-bottom p.text-header {
