--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ ul.menu-items {
     width: 100%;
     height: 75vh;
     background-color: white;
-    justify-content: center;
+    padding-top: 2rem;
   }
 
   .hero-bottom p.text-header {
