--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,8 @@ ul.menu-items {
 
 .mobile-overlay {
   overflow: hidden;
-  display: none;
+  display: flex;
+  transform: translate3d(-100vw, 0, 0);
   flex-direction: column;
   position: fixed;
   top: 0px;
@@ -209,12 +210,7 @@ ul.menu-items {
   background-color: black;
   height: 100%;
   width: 100vw;
-  transition: height 3s;
-  -webkit-transition: height 3s;
-  -moz-transition: height 3s;
-  -ms-transition: height 3s;
-  -o-transition: height 3s;
-  transition: height 3s;
+  transition: transform 0.5s ease-in;
   color: white;
   z-index: 10;
 }
@@ -273,7 +269,6 @@ ul.menu-items {
   }
   .hero-image {
     width: 10rem;
-    width: 13.1rem;
   }
   .hero-top-left {
     width: 50vw;
