--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,11 @@ ul.menu-items {
   background-color: black;
   height: 100%;
   width: 100vw;
-  transition: transform 0.5s ease-in;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  -ms-transition: transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
   color: white;
   z-index: 10;
 }
