--- a/css/styles.css
+++ b/css/styles.css
@@ -210,11 +210,8 @@ ul.menu-items {
   background-color: black;
   height: 100%;
   width: 100vw;
-  -webkit-transition: translate3d 0.5s;
-  -moz-transition: translate3d 0.5s;
-  -ms-transition: translate3d 0.5s;
-  -o-transition: translate3d 0.5s;
-  transition: translate3d 0.5s;
+
+  transition: transform 0.5s;
   color: white;
   z-index: 10;
 }
