--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,7 @@ ul.menu-items {
     font-size: 1.5rem;
     padding-top: 0px;
     padding-bottom: 0.5em;
+    font-weight: bold;
     color: black;
   }
 
