--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,11 @@ ul.menu-items {
   width: 50px;
   height: 50px;
 }
+
+.more-info {
+  height: 100vh;
+  padding-top: calc(var(--nav-height));
+}
 /* Media Queries */
 
 /* Mobile */
