--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@ ul.menu-items {
 
 .mobile-overlay {
   overflow: hidden;
-  display: flex;
+  display: none;
   transform: translate3d(-100vw, 0, 0);
   flex-direction: column;
   position: fixed;
