change mobile button size

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ ul.menu-items {
 .more-info {
   height: 100vh;
   padding-top: calc(var(--nav-height));
+  color: white;
 }
 /* Media Queries */
 
