--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ ul.menu-items {
   }
   .nav-menu-wrapper {
     padding: 0 0.4em;
-    padding: 0 20px 20px;
+    padding: 0px 20px;
   }
 
   .menu-logo > span {
