--- a/css/styles.css
+++ b/css/styles.css
@@ -249,8 +249,10 @@ ul.menu-items {
   }
   .nav-menu-wrapper {
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
     /* padding: 0 0.4em; */
-    padding: 0px 20px;
+    /* padding: 0px 20px; */
   }
 
   .menu-logo > span {
