--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,30 @@ ul.menu-items {
     color: white;
     z-index: 10;
   }
+
+  .overlay-menu ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+
+  .overlay-menu {
+    display: flex;
+    padding-top: 3rem;
+    align-items: center;
+    justify-content: center;
+    line-height: 2rem;
+    width: 100%;
+  }
+  .overlay-menu ul li {
+    border-bottom: 2px solid rgba(166, 162, 162, 0.304);
+  }
+
+  .overlay-menu ul li:last-of-type {
+    border: none;
+  }
+
   .nav-menu-wrapper {
     align-items: center;
     padding-left: 20px;
