change mobile button size

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,7 @@ ul.menu-items {
     width: 100%;
   }
   .overlay-menu ul li {
+    font-size: 1.4rem;
     border-bottom: 2px solid rgba(166, 162, 162, 0.304);
   }
 
