change mobile button size

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ ul.menu-items {
   width: 350px;
   height: 108px;
   font-family: "Poppins", sans-serif;
-  background-color: #d156a1;
+  background-color: #633e69;
   color: white;
 
   border: none;
