--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,8 @@ body {
 .overlay-menu ul {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 100%;
   text-align: center;
-  list-style: none;
 }
 
 .overlay-menu {
@@ -111,8 +110,9 @@ ul.menu-items {
 /* top section of Hero section */
 .hero-top {
   display: flex;
-  height: 45vh;
+  height: 50vh;
   width: 100vw;
+  justify-content: center;
 }
 
 .hero-top-left {
@@ -156,7 +156,7 @@ ul.menu-items {
 /* bottom section of Hero section */
 .hero-bottom {
   display: flex;
-  height: 45vh;
+  height: 50vh;
   width: 100%;
   background-repeat: no-repeat;
   background-position: top right;
@@ -212,7 +212,7 @@ ul.menu-items {
   width: 350px;
   height: 108px;
   font-family: "Poppins", sans-serif;
-  background-color: #633e69;
+  background-color: #d156a1;
   color: white;
 
   border: none;
@@ -225,7 +225,7 @@ ul.menu-items {
 }
 
 .overlay-menu {
-  display: flex;
+  display: none;
 
   position: relative;
   justify-content: center;
@@ -391,10 +391,11 @@ ul.menu-items {
   }
 
   .overlay-menu {
+    display: flex;
     line-height: 4rem;
   }
   .overlay-menu ul li {
-    font-size: 2rem;
+    font-size: 1.4rem;
   }
 
   .hero-bottom p.text-body {
