--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ ul.menu-items {
 .hero {
   display: flex;
   flex-direction: column;
-  padding-top: calc(var(--nav-height));
+  padding-top: var(--nav-height);
 }
 
 /* top section of Hero section */
