--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,9 @@ ul.menu-items {
 
 /* Mobile */
 @media screen and (max-width: 700px) {
+  .hero {
+    padding-top: var(--nav-height);
+  }
   .mobile-overlay {
     overflow: hidden;
     display: flex;
