--- a/css/styles.css
+++ b/css/styles.css
@@ -336,6 +336,7 @@ ul.menu-items {
 
   .hero-bottom p.text-header {
     justify-content: left;
+    text-align: left;
     padding-left: 36px;
     font-size: 2rem;
     padding-top: 0px;
