change mobile button size

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,8 @@ ul.menu-items {
 .hero-bottom p.text-header {
   padding-left: 36px;
   display: flex;
-  justify-content: left;
+  text-align: center;
+  /* justify-content: left; */
   font-size: 3rem;
   padding-top: 1rem;
   color: black;
@@ -335,7 +336,7 @@ ul.menu-items {
   }
 
   .hero-bottom p.text-header {
-    justify-content: left;
+    /* justify-content: left; */
     text-align: left;
     padding-left: 36px;
     font-size: 2rem;
