--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -73,3 +73,9 @@ body {
   font-size: 1.5rem;
   gap: 1.5rem;
 }
+
+@media screen and (max-width: 700px) {
+  .fixed-header-wrapper {
+    padding: 0;
+  }
+}
