--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -17,8 +17,9 @@
 }
 
 *,
-before,
-after {
+::before,
+::after,
+h1 {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -46,6 +47,8 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 .title-and-image {
@@ -79,5 +82,18 @@ body {
 @media screen and (max-width: 700px) {
   .fixed-header-wrapper {
     padding: 0;
+    flex-direction: column;
+  }
+
+  .menu-items {
+    display: none;
+  }
+  .child-pic img {
+    width: 5rem;
+    object-fit: cover;
+  }
+
+  .map img {
+    width: 7rem;
   }
 }
