--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -37,7 +37,7 @@ body {
 .fixed-header {
   display: flex;
   background: var(--bg-radial);
-  color: white;
+  /* color: white; */
   width: 100vw;
   height: auto;
 }
@@ -77,11 +77,17 @@ body {
   display: flex;
   font-size: 1.5rem;
   gap: 1.5rem;
+  color: white;
+}
+
+.hamburger-menu {
+  color: white;
 }
 
 @media screen and (max-width: 700px) {
   .fixed-header-wrapper {
-    padding: 0;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .menu-items {
